objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Monthly Recurring</fullName>
                </value>
                <value>
                    <fullName>Quaterly Recurring</fullName>
                </value>
                <value>
                    <fullName>Annual Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissionable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissionable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New to QBO</fullName>
                </value>
                <value>
                    <fullName>Desktop Migrator</fullName>
                </value>
                <value>
                    <fullName>Multi-Company</fullName>
                </value>
                <value>
                    <fullName>IRP</fullName>
                </value>
                <value>
                    <fullName>AAG</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Ebay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Unlock</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_SalesChannel__c</fullName>
        <label>Extended SalesChannel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CD-ROM</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Refundable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Level__c</fullName>
        <label>Offer Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Country__c</fullName>
        <description>Country the Offer is available.</description>
        <label>Offered Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>The platform this product runs on</description>
        <inlineHelpText>The platform this product runs on</inlineHelpText>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>online</fullName>
                </value>
                <value>
                    <fullName>windows</fullName>
                </value>
                <value>
                    <fullName>mac</fullName>
                </value>
                <value>
                    <fullName>android</fullName>
                </value>
                <value>
                    <fullName>iphone</fullName>
                </value>
                <value>
                    <fullName>ipad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProdAlias__c</fullName>
        <label>ProdAlias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QBO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Metric_ID__c</fullName>
        <description>Defines Usage file to use to collect count values</description>
        <inlineHelpText>This the usage file identifer to tell the ABC system which usage file contains the counts for this unit price code.</inlineHelpText>
        <label>Product Metric ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Product_Code__c</fullName>
        <label>Related Product Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Ongoing_Payment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Siebel Ongoing Payment Flag</description>
        <label>Ongoing Payment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Part_Number__c</fullName>
        <description>Siebel Part Number</description>
        <externalId>true</externalId>
        <label>Siebel Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Price_Type__c</fullName>
        <description>Siebel Price Type</description>
        <label>Siebel Price Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <label>Support Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beta Support</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>1 Year Support Plan</fullName>
                </value>
                <value>
                    <fullName>3 Year Support Plan</fullName>
                </value>
                <value>
                    <fullName>Support Plan</fullName>
                </value>
                <value>
                    <fullName>Setup Support Plan + CCP</fullName>
                </value>
                <value>
                    <fullName>30 Day Support Plan + CCP</fullName>
                </value>
                <value>
                    <fullName>90 Day Support Plan + CCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>free</fullName>
                </value>
                <value>
                    <fullName>freedom</fullName>
                </value>
                <value>
                    <fullName>basic</fullName>
                </value>
                <value>
                    <fullName>deluxe</fullName>
                </value>
                <value>
                    <fullName>premier</fullName>
                </value>
                <value>
                    <fullName>home and business</fullName>
                </value>
                <value>
                    <fullName>business</fullName>
                </value>
                <value>
                    <fullName>Its Deductible</fullName>
                </value>
                <value>
                    <fullName>Easy Start</fullName>
                </value>
                <value>
                    <fullName>Estimated Taxes</fullName>
                </value>
                <value>
                    <fullName>TTOB</fullName>
                </value>
                <value>
                    <fullName>LaunchPad</fullName>
                </value>
                <value>
                    <fullName>Easy Extension</fullName>
                </value>
                <value>
                    <fullName>SnapTax</fullName>
                </value>
                <value>
                    <fullName>NUE</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Per User</fullName>
                </value>
                <value>
                    <fullName>Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Range_From__c</fullName>
        <label>Usage Range From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Range_To__c</fullName>
        <label>Usage Range To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SKU__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Third Party</value>
        </filters>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IFS_Product_View</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Business_Product</value>
        </filters>
        <label>IFS Product View</label>
    </listViews>
    <listViews>
        <fullName>Online_Offers</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Customer_Segment__c</columns>
        <columns>Offered_Country__c</columns>
        <columns>Offer_Type__c</columns>
        <columns>Duration__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Offer</value>
        </filters>
        <filters>
            <field>Offered_Country__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <label>Online Offers</label>
        <language>en_US</language>
    </listViews>
</CustomObject>